[tool.poetry]
name = "superlists"
version = "0.1.0"
description = "A learning project for Test Driven Development with Django and Python"
authors = ["David Filat <david.filat@eurasiaprecept.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
psycopg2 = "^2.8.4"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
Django = "^3.0.3"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
autopep8 = "^1.5"
colour-runner = "^0.1.1"
coverage = "^5.0.3"
django-debug-toolbar = "^2.2"
flake8 = "^3.7.9"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.4.2"
flake8-django = "^0.0.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-logging-format = "^0.6.0"
flake8-rst-docstrings = "^0.0.13"
gmaily = "^0.0.3"
isort = "^4.3.21"
mock = "^4.0.1"
pyflakes = "^2.1.1"
pylama = "^7.7.1"
pylint = "^2.4.4"
pylint-django = "^2.0.13"
pyls-black = "^0.4.4"
pyls-isort = "^0.1.1"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-django = "^3.8.0"
pytest-flakes = "^4.0.0"
pytest-mock = "^2.0.0"
pytest-sugar = "^0.9.2"
pytest-timeout = "^1.3.4"
pytest-xdist = "^1.31.0"
selenium = "^3.141.0"
mypy = "^0.761"

[tool.poetry.scripts]
test = "python./manage.py test"
server = "python ./manage.py runserver"
makemigrations = "manage.py makemigrations"
migrate = "./manage.py migrate"
prettify = "prettier --write **/*.html"

[tool.poetry.extras]
pgsql = ["psycopg2"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
